--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cetusprotocol/aggregator-sdk": "^1.4.3",
     "@cetusprotocol/cetus-sui-clmm-sdk": "^5.4.0",
     "@mysten/dapp-kit": "^0.14.37",
     "@mysten/sui": "1.14.4",
@@ -20,10 +21,14 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.62.8",
+    "@types/bn.js": "^5.2.0",
+    "bn.js": "^5.2.2",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "14.2.21",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0"
